k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-devops-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-devops-app
  template:
    metadata:
      labels:
        app: java-devops-app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: java-app
        image: heenak.jfrog.io/docker-devops/java-devops-app:6.0
        ports:
        - containerPort: 8081
      imagePullSecrets:
      - name: jfrog-creds
