k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-devops-app-service
  namespace: dev
spec:
  selector:
    app: java-devops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: NodePort
